@@ -41,7 +41,6 @@ import com.ford.syncV4.proxy.rpc.DeleteCommandResponse;
 import com.ford.syncV4.proxy.rpc.DeleteFileResponse;
 import com.ford.syncV4.proxy.rpc.DeleteInteractionChoiceSetResponse;
 import com.ford.syncV4.proxy.rpc.DeleteSubMenuResponse;
-import com.ford.syncV4.proxy.rpc.DialNumberResponse;
 import com.ford.syncV4.proxy.rpc.EncodedSyncPDataResponse;
 import com.ford.syncV4.proxy.rpc.GenericResponse;
 import com.ford.syncV4.proxy.rpc.GetDTCsResponse;
@@ -2500,11 +2499,6 @@ public class SyncProxyALMManager {
 		@Override
 		public void onUpdateTurnListResponse(UpdateTurnListResponse response) {
 			_lifecycleListener.onUpdateTurnListResponse(response);
-		}
-
-		@Override
-		public void onDialNumberResponse(DialNumberResponse response) {
-			_lifecycleListener.onDialNumberResponse(response);
 		}
 	}
 }
