@@ -88,7 +88,6 @@ import com.ford.syncV4.proxy.rpc.DeleteCommand;
 import com.ford.syncV4.proxy.rpc.DeleteFile;
 import com.ford.syncV4.proxy.rpc.DeleteInteractionChoiceSet;
 import com.ford.syncV4.proxy.rpc.DeleteSubMenu;
-import com.ford.syncV4.proxy.rpc.DialNumber;
 import com.ford.syncV4.proxy.rpc.EncodedSyncPData;
 import com.ford.syncV4.proxy.rpc.EndAudioPassThru;
 import com.ford.syncV4.proxy.rpc.GenericResponse;
@@ -962,7 +961,6 @@ public class SyncProxyTester extends Activity implements OnClickListener {
 			addToFunctionsAdapter(adapter, Names.ShowConstantTBT);
 			addToFunctionsAdapter(adapter, Names.AlertManeuver);
 			addToFunctionsAdapter(adapter, Names.UpdateTurnList);
-			addToFunctionsAdapter(adapter, Names.DialNumber);
 			addToFunctionsAdapter(adapter, GenericRequest);
 			
 			adapter.sort(new Comparator<String>() {
@@ -1739,8 +1737,6 @@ public class SyncProxyTester extends Activity implements OnClickListener {
 							dlg.show();
 						} else if (adapter.getItem(which) == Names.UpdateTurnList) {
 							sendUpdateTurnList();
-						} else if (adapter.getItem(which) == Names.DialNumber) {
-							sendDialNumber();
 						} else if (adapter.getItem(which) == GenericRequest) {
 							sendGenericRequest();
 						}
@@ -2781,40 +2777,6 @@ public class SyncProxyTester extends Activity implements OnClickListener {
 						builder.show();
 					}
 
-					private void sendDialNumber() {
-						AlertDialog.Builder builder;
-
-						Context mContext = adapter.getContext();
-						LayoutInflater inflater = (LayoutInflater) mContext
-								.getSystemService(LAYOUT_INFLATER_SERVICE);
-						View layout = inflater.inflate(R.layout.dialnumber, null);
-						final EditText txtPhoneNumber = (EditText) layout.findViewById(R.id.dialNumber_editPhoneNumber);
-						
-						builder = new AlertDialog.Builder(mContext);
-						builder.setPositiveButton("OK", new DialogInterface.OnClickListener() {
-							public void onClick(DialogInterface dialog, int id) {
-								DialNumber msg = new DialNumber();
-								msg.setNumber(txtPhoneNumber.getText().toString());
-								msg.setCorrelationID(autoIncCorrId++);
-								
-								_msgAdapter.logMessage(msg, true);
-								
-								try {
-									ProxyService.getInstance().getProxyInstance().sendRPCRequest(msg);
-								} catch (SyncException e) {
-									_msgAdapter.logMessage("Error sending message: " + e, Log.ERROR, e);
-								}
-							}
-						});
-						builder.setNegativeButton("Cancel", new DialogInterface.OnClickListener() {
-							public void onClick(DialogInterface dialog, int id) {
-								dialog.cancel();
-							}
-						});
-						builder.setView(layout);
-						builder.show();
-					}
-					
 					private void updateDynamicFooter(EditText txtNumTicks,
 							EditText txtSliderFooter, String joinString) {
 						// set numTicks comma-separated strings
